log
Sun 14 May 2023 12:19:42 AM UTC: 
 tests:  0|4
total_score: 0/70
27b434f
Sun 14 May 2023 12:23:42 AM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capc’; did you mean ‘capac’?
   40 |   auxM->capc = 3;
      |         ^~~~
      |         capac
Compilation failed
bdb4992
Sun 14 May 2023 12:23:47 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5a23ac8
Sun 14 May 2023 12:25:58 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:13: error: implicit declaration of function ‘createheap’; did you mean ‘createHeap’? [-Werror=implicit-function-declaration]
   38 |   Heap *h = createheap();
      |             ^~~~~~~~~~
      |             createHeap
heap.c:38:13: error: initialization of ‘Heap *’ {aka ‘struct Heap *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
heap.c:41:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capc’; did you mean ‘capac’?
   41 |   auxM->capc = 3;
      |         ^~~~
      |         capac
heap.c:42:4: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘data’
   42 |   h->data = NULL;
      |    ^~
heap.c:43:4: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   43 |   h->priority = 0;
      |    ^~
cc1: all warnings being treated as errors
Compilation failed
269074a
